for joyent to start on deploy

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-    "name": "application-name"
+    "name": "St@lker"
   , "version": "0.0.1"
   , "private": true
+  , "scripts": {"start": "node app.js"}
   , "dependencies": {
       "express": "2.4.4"
     , "jade": ">= 0.0.1"
