Change application name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "St@lker"
+    "name": "Stalkr"
   , "version": "0.0.1"
   , "private": true
   , "scripts": {"start": "node app.js"}
